src/styles/cardsStyle.css
.mini-american {
	width: 270px;
	height: 414px;
}

.mini-american-landscape {
	height: 270px;
	width: 414px;
}

.standard {
	width: 326.4px;
	height: 456.96px;
}

.square {
	width: 352.5px;
	height: 352.5px;
}

.tarot {
	width: 359.04px;
	height: 620.16px;
}

.tarot.technology,
.half-page,
.full-page {
	width: 326.4px;
	height: 456.96px;
}

.card {
	font-size: 12px;
	border-radius: 10px;
	position: relative;
	z-index: 1;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	overflow-y: auto;
	max-width: 95%;
}

.card::-webkit-scrollbar {
	display: none;
}

.card p {
	margin: 0;
}

.card-info {
	width: 100%;
	display: flex;
	column-gap: 10px;
	justify-content: center;
	align-items: center;
}

.centered .card-info-header {
	text-align: right;
	flex-basis: 45%;
	font-weight: BOLD;
}

.offset .card-info-header {
	text-align: right;
	flex-basis: 35%;
	font-weight: BOLD;
}

.card-info-detail {
	flex-basis: 55%;
	text-align: left;
}

.cycle4 .invertible {
	filter: saturate(100%) invert(74%) sepia(63%) saturate(363%) hue-rotate(2deg) brightness(106%) contrast(81%);
}

.asterisk-text {
	font-size: 10px;
	margin-top: 4px;
}

.title-icon {
	text-align: center;
	flex: 2 0 52px;
	display: flex;
}

.bottom-row {
	overflow: hidden;
}

@media (min-width: 820px) {
	.tarot.technology {
		width: 620.16px;
		height: 359.04px;
	}

	.card {
		max-width: unset;
	}

	.half-page, .full-page {
		min-height: 456.96px;
		height: unset;
	}

	.half-page,
	.full-page {
		width: 834px;
	}
}

.card__footer {
  margin-top: auto;
  padding-top: 4px;
  padding-bottom: 2px;
  padding: 6px 10px 4px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card_footer-div {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card__id {
  font-size: 10px;
  justify-content: flex-start;
}

